# rustix-orm

./: CHANGELOG.md  Cargo.toml  README.md  license.md
.github/workflows/: rust.yml
rusticx/: Cargo.toml  README.md
rusticx/src/: connection.rs  error.rs  lib.rs  model.rs  sql_types.rs  transaction_manager.rs
rusticx_derive/: Cargo.toml  README.md
rusticx_derive/src/: lib.rs
rusticx_example/: Cargo.toml
rusticx_example/src/: main.rs
rusticx_example/tests/: test.rs
rustix-orm/: Cargo.toml
rustix-orm-derive/: Cargo.toml
rustix-orm-derive/src/: lib.rs
rustix-orm-example/: Cargo.toml
rustix-orm-example/src/: example.rs  main.rs
rustix-orm-example/tests/: test.rs
rustix-orm/src/: connection.rs  error.rs  lib.rs  migrations.rs  model.rs  query_builder.rs  sql_types.rs  transaction_manager.rs
