[package]
name = "rusticx"
version = "0.1.3"
edition = "2021"
authors = ["Tarun Vishwakarma <vishwakarmatarun121@icloud.com>"]
description = "A lightweight, intuitive ORM library for Rust"
license = "MIT"
repository = "https://github.com/TarunVishwakarma1/rustix-orm"
readme = "README.md"
keywords = ["orm", "database", "sql", "postgres", "mysql"]
categories = ["database"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For PostgreSQL
postgres = { version = "0.19", optional = true, features = ["with-uuid-1"]}
tokio-postgres = { version = "0.7",features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
# For MySQL
mysql = { version = "26.0.0", optional = true }
# For SQLite
rusqlite = { version = "0.35.0",features = ["bundled"], optional = true }
log = "0.4"
tokio = {version = "1.45.0", features = ["rt-multi-thread"]}
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"]}
uuid = { version = "1.16.0", optional = true, features = ["v4", "serde"] }

[features]
default = ["postgres-support"]
postgres-support = ["postgres", "tokio-postgres"]
mysql-support = ["mysql"]
sqlite-support = ["rusqlite"]
full = ["postgres-support", "mysql-support", "sqlite-support", "uuid"]
uuid = ["dep:uuid"]

[dev-dependencies]
env_logger = "0.11.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3