[package]
name = "rusticx_derive"
version = "0.1.2"
edition = "2021"
authors = ["Tarun Vishwakarma <vishwakarmatarun121@icloud.com>"]
description = "Derive macros for Rusticx ORM"
license = "MIT"
repository = "https://github.com/TarunVishwakarma1/rustix-orm"
readme = "README.md"
[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3