[package]
name = "rusticx_example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
rusticx = { version = "0.1.3", features = ["postgres"], path = "../rusticx"}
rusticx_derive = { path = "../rusticx_derive", version = "0.1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.45.0", features = ["full"]}

[dev-dependencies]
anyhow = "1.0.98"
