[package]
name = "rustix-orm-derive"
version = "0.1.0"
edition = "2021"
authors = ["Tarun Vishwakarma <vishwakarmatarun121@icloud.com>"]
description = "Derive macros for Rustic ORM"
license = "MIT"
repository = "https://github.com/TarunVishwakarma1/rustix-orm"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"