[package]
name = "rustix-orm-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rustix-orm = { path = "../rustix-orm", features = ["postgres"] }
rustix-orm-derive = { path = "../rustix-orm-derive", version = "0.1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
